# ConMemCode

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
common/: registry.py
common/interactions/: base_interaction.py  multiturn_interaction.py  singleturn_interaction.py
common/utils/: action_resolver.py  code_utils.py  factual_qa.py  index_building.py  math_utils.py  retrieval_corpus.py  retrieval_utils.py
configs/conmem/: kodcode.yaml  pddl.yaml  popqa.yaml  triviaqa.yaml
data/: __init__.py  base_builder.py
data/kodcode/: builder.py  env.py
data/pddl/: builder.py  prompts.py
data/pddl/env/: local_env.py  pddl_env.py
data/popqa/: builder.py  env.py  retriever.py  sampling.py
data/triviaqa/: builder.py  env.py
interactions/: base_interaction.py  multiturn_interaction.py  singleturn_interaction.py
mas_core/: __init__.py  base_centralized_memory.py  base_memory_mas.py
mas_core/memory/: __init__.py
mas_core/memory/backbone/: __init__.py
mas_core/memory/backbone/conmem/: __init__.py  admission.py  centralized_adapter.py  config.py  prompts.py  (+12 more)
mas_core/structures/autogen/: autogen_main.py
mas_core/structures/camel/: camel_main.py
mas_core/structures/macnet/: macnet_main.py
scripts/: activate_conmem_env.sh  build_popqa_index.py  build_triviaqa_index.py  compact_memory_store.py  deploy_embedding.py  deploy_local.py  deploy_retrieval.py  eval_kodcode.py  eval_pddl.py  eval_popqa.py  eval_triviaqa.py  run_benchmarks.py  run_reme_http_service.sh  view_cards.py
utils/: agent.py  config_loader.py  message.py  stats.py
(+16 files in other folders)
